ingress.yml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: app
    namespace: epi-paas-subject1
  spec:
    rules:
      - host: app.paas.epi.toune.fr
        http:
          paths:
            - backend:
                serviceName: nginx
                servicePort: 3000
              path: /
    tls:
        - hosts:
            - app.paas.epi.toune.fr
          secretName: wildcard-paas-epi
