jenkins-ingress.yml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: ci
    namespace: epi-paas-subject1
  spec:
    rules:
      - host: ci.paas.epi.toune.fr
        http:
          paths:
            - backend:
                serviceName: jenkins
                servicePort: 8080
              path: /
    tls:
        - hosts:
            - jenkins.paas.epi.toune.fr
          secretName: wildcard-paas-epi
